--- a/app/src/main/res/xml/updater.xml
+++ b/app/src/main/res/xml/updater.xml
@@ -16,6 +16,7 @@
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+
     <PreferenceCategory android:title="@string/mokee_information_title">
 
         <com.mokee.center.preference.VersionPreference android:title="@string/mokee_version_title" />
@@ -32,15 +33,16 @@
 
     <PreferenceCategory android:title="@string/update_settings_title">
         <com.mokee.center.preference.IncrementalUpdatesPreference
+            android:disableDependentsState="true"
             android:key="incremental_updates"
-            android:title="@string/incremental_updates_title"
-            android:disableDependentsState="true" />
+            android:title="@string/incremental_updates_title" />
         <com.mokee.center.preference.VerifiedUpdatesPreference
             android:key="pref_verified_updates"
             android:title="@string/verified_updates_title" />
         <com.mokee.center.preference.UpdateTypePreference
+            android:dependency="incremental_updates"
             android:key="pref_update_type"
-            android:title="@string/update_type_title"
-            android:dependency="incremental_updates" />
+            android:title="@string/update_type_title" />
     </PreferenceCategory>
+
 </PreferenceScreen>
