--- a/app/src/main/res/xml/updater.xml
+++ b/app/src/main/res/xml/updater.xml
@@ -24,10 +24,12 @@
         <com.mokee.center.preference.UniqueIDPreference android:title="@string/unique_id_title" />
 
         <com.mokee.center.preference.DonationRecordPreference
-            android:key="pref_donation_record"
+            android:key="donation_record"
             android:title="@string/donation_record_title" />
 
-        <com.mokee.center.preference.LastCheckTimePreference android:title="@string/last_check_time_title" />
+        <com.mokee.center.preference.LastUpdateCheckPreference
+            android:key="last_update_check"
+            android:title="@string/last_update_check_title" />
 
     </PreferenceCategory>
 
@@ -37,11 +39,11 @@
             android:key="incremental_updates"
             android:title="@string/incremental_updates_title" />
         <com.mokee.center.preference.VerifiedUpdatesPreference
-            android:key="pref_verified_updates"
+            android:key="verified_updates"
             android:title="@string/verified_updates_title" />
         <com.mokee.center.preference.UpdateTypePreference
             android:dependency="incremental_updates"
-            android:key="pref_update_type"
+            android:key="update_type"
             android:title="@string/update_type_title" />
     </PreferenceCategory>
 
